[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Enemies/Cirrus/Cirrus.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Cirrus.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="Cirrus" type="AnimatedSprite"]
frames = SubResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.369862, -0.0608284 )
scale = Vector2( 14.2421, 0.370173 )
shape = SubResource( 2 )

[node name="Cirrus_Sound" type="AudioStreamPlayer" parent="."]

[node name="cirrus_effect_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="cirrus_effect_timer" to="." method="_on_cirrus_effect_timeout"]
